New Marker Test

--- a/css/map.css
+++ b/css/map.css
@@ -45,6 +45,7 @@
 	margin: 0;
 	
 	font-size: 13px;
+	letter-spacing:1px;
 	text-align: center;
 	text-transform: uppercase;
 	list-style-type: none;
