--- a/css/map.css
+++ b/css/map.css
@@ -68,10 +68,9 @@
 	position: absolute;
 	top: 60px;
 	right: 80px;
-
 	color: #999;
-	
-	font-size: 10px;
+	font-size: 12px;
+	letter-spacing:1px;
 }
 
 #mapControls .months .prevYear {
@@ -116,7 +115,7 @@
 	top: 0;
 	left: 707px;
 
-	width: 3px;
+	width: 4px;
 	height: 30px;
 	background-color: #000;
 	-webkit-transition: all 0.3s ease;
